v12/fixtures/ast/errors/alias_reexport_impl_ambiguity/alias_b.able
package alias_reexport_impl_ambiguity_b

import alias_reexport_impl_ambiguity_base.{Taggable, Widget}

private type AliasB = Widget

impl Taggable for AliasB {
  fn tag(self: Self) -> String { "b" }
}
